--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,13 +13,16 @@
             </button>
         </div>
         <label>Usuario <strong class="obligatorio">*</strong></label>
-        <input type="text" [(ngModel)]="this.usuarioInterface.ced_usu" class="form-control" placeholder="Digite Usuario">
+        <input type="text" [(ngModel)]="this.usuarioInterface.ced_usu" class="form-control"
+            placeholder="Digite Usuario">
         <label>Contraseña <strong class="obligatorio">*</strong></label>
-        <input type="password" [(ngModel)]="this.usuarioInterface.pas_usu" class="form-control" placeholder="Digiste Contraseña">
+        <input type="password" [(ngModel)]="this.usuarioInterface.pas_usu" class="form-control"
+            placeholder="Digiste Contraseña">
         <br>
-        <button class="btn btn-outline-success btn-block" (click)="login()"><i class="fas fa-sign-in-alt"></i> Ingresar</button>
-        <button class="btn btn-outline-primary btn-block" data-toggle="modal"
-            data-target="#modalRegistrarse"><i class="fas fa-user-plus"></i> Registrarse</button>
+        <button class="btn btn-outline-success btn-block" (click)="login()"><i class="fas fa-sign-in-alt"></i>
+            Ingresar</button>
+        <button class="btn btn-outline-primary btn-block" data-toggle="modal" data-target="#modalRegistrarse"><i
+                class="fas fa-user-plus"></i> Registrarse</button>
     </div>
     <div class="col-md-2 col-lg-4 col-xl-4"></div>
 </div>
@@ -37,29 +40,46 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-10 col-lg-10 col-xl-10">
+                        <div *ngIf="this.bancoService.messageForm != ''" class="alert alert-danger" role="alert">
+                            {{ this.bancoService.messageForm }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-10 col-lg-10 col-xl-10">
                         <label>Cedula Ciudadania <strong class="obligatorio">*</strong></label>
-                        <input type="text" [(ngModel)]="this.usuarioInterface.ced_usu" class="form-control" placeholder="Digite Cedula">
+                        <input type="text" [(ngModel)]="this.usuarioInterface.ced_usu" class="form-control"
+                            placeholder="Digite Cedula">
                         <label>Nombre Completo <strong class="obligatorio">*</strong></label>
-                        <input type="text" [(ngModel)]="this.usuarioInterface.nom_usu" class="form-control" placeholder="Digite Nombre">
+                        <input type="text" [(ngModel)]="this.usuarioInterface.nom_usu" class="form-control"
+                            placeholder="Digite Nombre">
                         <label>Contraseña <strong class="obligatorio">*</strong></label>
-                        <input type="password" [(ngModel)]="this.usuarioInterface.pas_usu" class="form-control" placeholder="Digite Contraseña">
+                        <input type="password" [(ngModel)]="this.usuarioInterface.pas_usu" class="form-control"
+                            placeholder="Digite Contraseña">
                         <label>Direccion</label>
-                        <input type="text" [(ngModel)]="this.usuarioInterface.dir_usu" class="form-control" placeholder="Digite Direccion">
+                        <input type="text" [(ngModel)]="this.usuarioInterface.dir_usu" class="form-control"
+                            placeholder="Digite Direccion">
                         <label>Departamento</label>
-                        <input type="text" [(ngModel)]="this.usuarioInterface.dep_usu" class="form-control" placeholder="Digite Direccion">
+                        <input type="text" [(ngModel)]="this.usuarioInterface.dep_usu" class="form-control"
+                            placeholder="Digite Direccion">
                         <label>Ciudad</label>
-                        <input type="text" [(ngModel)]="this.usuarioInterface.ciu_usu" class="form-control" placeholder="Digite Direccion">
+                        <input type="text" [(ngModel)]="this.usuarioInterface.ciu_usu" class="form-control"
+                            placeholder="Digite Direccion">
                         <label>Fecha Nacimiento</label>
-                        <input type="date" [(ngModel)]="this.usuarioInterface.fec_nac_usu" class="form-control" placeholder="Digite Direccion">
-                        <label>Sucursal</label>
-                        <select class="form-control" [(ngModel)]="this.usuarioInterface.fec_nac_usu">
-                            <!-- <option *ngFor="let data of this.usuarioInterface.getSucursales()" value="data.id_suc"> {{data.mob_suc}} </option> -->
+                        <input type="date" [(ngModel)]="this.usuarioInterface.fec_nac_usu" class="form-control"
+                            placeholder="Digite Direccion">
+                        <label>Sucursal <strong class="obligatorio">*</strong></label>
+                        <select class="form-control" [(ngModel)]="this.usuarioInterface.id_suc">
+                            <option *ngFor="let data of this.bancoService.listSucursales" value="{{data.id_suc}}">
+                                {{data.nom_suc}} </option>
                         </select>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-primary">Registrar Usuario</button>
+                <button type="button" class="btn btn-outline-primary"
+                    (click)="this.bancoService.registrarUsuario(this.usuarioInterface)">Registrar Usuario</button>
             </div>
         </div>
     </div>
