--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
         <label>Usuario <strong class="obligatorio">*</strong></label>
         <input type="text" [(ngModel)]="this.usuarioInterface.ced_usu" class="form-control"
-            placeholder="Digite Usuario">
+            placeholder="Digite Usuario" autocomplete="on">
         <label>Contraseña <strong class="obligatorio">*</strong></label>
         <input type="password" [(ngModel)]="this.usuarioInterface.pas_usu" class="form-control"
             placeholder="Digiste Contraseña">
