--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,15 @@ input, button, select {
 td {
     word-break: break-all !important;
 }
+
+.table thead th {
+    border-top: 1px solid white !important;
+}
+
+.table td, .table th {
+    padding: 2px !important;
+}
+
+.table {
+    margin-bottom: 100px !important;
+}
