--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,18 @@ td {
 .table {
     margin-bottom: 100px !important;
 }
+
+.btn-crud {
+    float: right !important;
+    margin-left: 8px !important;
+}
+
+.false {
+    color: red;
+    font-weight: bold;
+}
+
+.true {
+    color: green;
+    font-weight: bold;
+}
