--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -3,7 +3,7 @@
     <div class="loader text-center">
       <img src="assets/images/loader.gif" width="50">
       <br>
-      <p class="text-center" style="font-size: 0.9rem !important;" [innerHTML]="this.bancoService.getTextLoader()"></p>
+      <p class="text-center" style="font-size: 0.9rem !important;">{{ this.bancoService.getTextLoader() }}</p>
     </div>
   </div>
   
