--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer id="footer">
     <div class="col">
-      <h6>Sistema Bancario</h6>
+      <h6>© Desarrollo Sistema De Informacion Bancario - 2019</h6>
     </div>
 </footer>
