--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,7 +2,8 @@
     <div class="col-md-2 col-lg-3 col-xl-3"></div>
     <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-6">
         <br>
-        <h1 class="text-center">WELCOME</h1>
+        <h1 class="text-center">BIENVENIDO</h1>
+        <h4 style="color: #67ace6;" class="text-center">{{ this.data.nombre }}</h4>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dignissimos at laborum ab atque vitae
             molestias amet non nisi officia minima placeat rerum, blanditiis perferendis. Fugiat minima quis sed
@@ -17,14 +18,14 @@
             Iure non, reprehenderit laborum dignissimos animi illo, accusantium qui similique numquam debitis dolore
             quidem soluta asperiores, quia temporibus ipsum excepturi praesentium? Tenetur totam dolore voluptatum
             aliquid mollitia quidem est deserunt.</p>
-        <p><strong>NOMBRE: </strong>{{ this.data.nombre }}</p>
+        <!-- <p><strong>NOMBRE: </strong></p>
         <p><strong># DCOUMENTO: </strong>{{ this.data.documento }}</p>
         <p><strong>DIRECCION: </strong>{{ this.data.direccion }}</p>
         <p><strong>CIUDAD: </strong>{{ this.data.ciudad }}</p>
         <p><strong>DEPARTAMENTO: </strong>{{ this.data.depto }}</p>
         <p><strong>FECHA NACIMIENTO: </strong>{{ this.data.fecha_nacimiento | date: 'yyyy-MM-dd' }}</p>
         <p><strong>SUCURSAL: </strong>{{ this.data.nombre_sucu }}</p>
-        <p><strong>ROL: </strong>{{ this.data.nombre_rol }}</p>
+        <p><strong>ROL: </strong>{{ this.data.nombre_rol }}</p> -->
     </div>
     <div class="col-md-2 col-lg-3 col-xl-3"></div>
 </div>
