--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,30 @@
 <div *ngIf="this.rol != null && this.bancoService.sesion" class="content-menu">
+        <!-- ADMIN -->
         <button (click)="this.cambiarVista('usuarios')" *ngIf="this.rol == 1"
                 class="btn btn-outline-primary btn-block">Usuarios <i class="fas fa-user-friends"></i></button>
         <button (click)="this.cambiarVista('roles')" *ngIf="this.rol == 1"
                 class="btn btn-outline-secondary btn-block">Roles <i class="fas fa-user-shield"></i></button>
         <button (click)="this.cambiarVista('sucursales')" *ngIf="this.rol == 1"
                 class="btn btn-outline-success btn-block">Sucursales <i class="fas fa-hotel"></i></button>
-        <button *ngIf="this.rol == 1" class="btn btn-outline-danger btn-block">Transacciones <i
-                        class="fas fa-receipt"></i></button>
-        <button *ngIf="this.rol == 1" class="btn btn-outline-warning btn-block">Cuentas <i
-                        class="fas fa-credit-card"></i></button>
+        <button (click)="this.cambiarVista('transacciones')" *ngIf="this.rol == 1"
+                class="btn btn-outline-danger btn-block">Transacciones <i class="fas fa-receipt"></i></button>
+        <button (click)="this.cambiarVista('cuentas')" *ngIf="this.rol == 1"
+                class="btn btn-outline-warning btn-block">Cuentas <i class="fas fa-credit-card"></i></button>
         <button (click)="this.cambiarVista('tipo_cuenta')" *ngIf="this.rol == 1"
                 class="btn btn-outline-info btn-block">Tipo Cuenta <i class="fas fa-user-check"></i></button>
-        <button (click)="this.cambiarVista('welcome')" class="btn btn-outline-dark btn-block">Inicio <i
-                        class="fas fa-home"></i></button>
+        <button (click)="this.cambiarVista('sucursal_filtro')" *ngIf="this.rol == 1"
+                class="btn btn-outline-warning btn-block">Sucursal Filtro <i class="fas fa-hotel"></i></button>
+        <br>
+        <br>
+        <!-- CUENTAS -->
+        <button *ngFor="let data of this.listCuentas"
+                (click)="this.cambiarVista('cuenta_usuario');this.bancoService.setCuenta(data);"
+                class="btn btn-outline-danger btn-block">{{ data.num_cue }}<br>{{ data.des_tip }} <i
+                        class="fas fa-credit-card"></i></button>
+        <br>
+        <br>
+        <button (click)="this.cambiarVista('welcome');this.getCuentas()" class="btn btn-outline-dark btn-block">Inicio
+                <i class="fas fa-home"></i></button>
         <button [routerLink]="['/']" class="btn btn-outline-dark btn-block"
                 (click)="this.bancoService.sesion = false">Cerrar Sesion <i class="fas fa-power-off"></i></button>
 </div>
