ajustes de server

--- a/src/app/cuenta-usuario/cuenta-usuario.component.html
+++ b/src/app/cuenta-usuario/cuenta-usuario.component.html
@@ -30,9 +30,9 @@
                     class="btn btn-outline-success btn-crud" data-toggle="modal" data-target="#modalAll"><i
                         class="fas fa-plus"></i> Generar Transaccion</button>
                 <button (click)="this.getTraFechas()" style="margin-top: 26px !important;"
-                    class="btn btn-outline-info btn-crud"><i class="fas fa-search-dollar"></i></button>
-                <button style="margin-top: 26px !important;" class="btn btn-outline-danger btn-crud"><i
-                        class="fas fa-chart-bar"></i></button>
+                    class="btn btn-outline-danger btn-crud"><i class="fas fa-chart-bar"></i></button>
+                <!-- <button style="margin-top: 26px !important;" class="btn btn-outline-danger btn-crud"><i
+                        class="fas fa-chart-bar"></i></button> -->
             </div>
         </div>
         <br>
